// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`searchRanked snapshot (ordering + normalized scores) > 'case-insensitive' 1`] = `
[
  {
    "score": 1,
    "value": "FOO",
  },
  {
    "score": 0.6,
    "value": "xfooy",
  },
  {
    "score": 0.5,
    "value": "fOoBar",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'english-korean' 1`] = `
[
  {
    "score": 0.625,
    "value": "api한글테스트",
  },
  {
    "score": 0.5,
    "value": "rest-api한글",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'frontend' 1`] = `
[
  {
    "score": 1,
    "value": "프론트",
  },
  {
    "score": 0.6,
    "value": "프론트엔드",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'gang' 1`] = `
[
  {
    "score": 1,
    "value": "강",
  },
  {
    "score": 0.33333333,
    "value": "강원도",
  },
  {
    "score": 0.25,
    "value": "강남구청",
  },
  {
    "score": 0.16666667,
    "value": "서울시 강남",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'gildong' 1`] = `
[
  {
    "score": 0.66666667,
    "value": "홍길동",
  },
  {
    "score": 0.66666667,
    "value": "길동이",
  },
  {
    "score": 0.5,
    "value": "서울길동",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'hakgeup' 1`] = `
[
  {
    "score": 1,
    "value": "학급",
  },
  {
    "score": 0.66666667,
    "value": "A학급",
  },
  {
    "score": 0.66666667,
    "value": "B학급",
  },
  {
    "score": 0.5,
    "value": "학급미정",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'hong-gil' 1`] = `
[
  {
    "score": 0.66666667,
    "value": "홍길동",
  },
  {
    "score": 0.66666667,
    "value": "김홍길",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'jamo-hg' 1`] = `
[
  {
    "score": 0.99,
    "value": "한글",
  },
  {
    "score": 0.99,
    "value": "학교",
  },
  {
    "score": 0.99,
    "value": "호구",
  },
  {
    "score": 0.66,
    "value": "화곡역",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'korean-partial' 1`] = `
[
  {
    "score": 1,
    "value": "각",
  },
  {
    "score": 0.5,
    "value": "각도",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'long-query' 1`] = `
[
  {
    "score": 0.66666667,
    "value": "한국검색엔진",
  },
  {
    "score": 0.57142857,
    "value": "검색엔진최적화",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'numeric-mixed' 1`] = `
[
  {
    "score": 1,
    "value": "12",
  },
  {
    "score": 0.66666667,
    "value": "112",
  },
  {
    "score": 0.33333333,
    "value": "a1b2c3",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'react' 1`] = `
[
  {
    "score": 1,
    "value": "리액트",
  },
  {
    "score": 0.6,
    "value": "리액트쿼리",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'seoul' 1`] = `
[
  {
    "score": 0.66666667,
    "value": "서울시",
  },
  {
    "score": 0.4,
    "value": "서울특별시",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'single-char-tie' 1`] = `
[
  {
    "score": 1,
    "value": "x",
  },
  {
    "score": 0.5,
    "value": "ax",
  },
  {
    "score": 0.5,
    "value": "xx",
  },
  {
    "score": 0.33333333,
    "value": "bxc",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'spaces' 1`] = `
[
  {
    "score": 0.75,
    "value": "a  b",
  },
  {
    "score": 0.5,
    "value": "xx a b",
  },
]
`;

exports[`searchRanked snapshot (ordering + normalized scores) > 'subsequence-abc' 1`] = `
[
  {
    "score": 1,
    "value": "abc",
  },
  {
    "score": 0.42857143,
    "value": "xaxbxcx",
  },
  {
    "score": 0.42857143,
    "value": "zzabczz",
  },
]
`;
